# tag-generator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: README.md  build.yaml  checks.yaml  ci.sh  deploy-template.yaml  deploy.yaml  docker.yaml  tag.yaml  template.deploy.yaml  terraform.yaml  test.yaml
api/: Dockerfile  docker-compose.yml  pyproject.toml
api/api/: __init__.py  endpoints.py  main.py  request_schemas.py  service.py  settings.py
api/test_api/: conftest.py  test_endpoints.py  test_service.py
core/: README.md  pyproject.toml
core/notebooks/: exploration.ipynb  model.ipynb
core/tag_generator/: feature_pipeline.py  inference_pipeline.py  preprocessing.py  pyproject.toml
core/tag_generator/tag_generator/: feature_pipeline.py  inference_pipeline.py  preprocessing.py  training_pipeline.py
core/tag_generator/test_tag_generator/: test_feature_pipeline.py  test_preprocessing.py
core/taggenerator/: pyproject.toml
core/taggenerator/taggenerator/: __init__.py  config.py  feature_pipeline.py  inference_pipeline.py  preprocessing.py  settings.py
core/taggenerator/test_taggenerator/: test_feature_pipeline.py  test_preprocessing.py
core/test_tag_generator/: sample.xml
iac/terraform/: README.md  terraform.tf
iac/terraform/dev/: apps.yaml  backend.tf  ecs.tf  locals.tf  providers.tf  s3.tf
iac/terraform/global/: backend.tf  cloudwatch.tf  ecr.tf  iam.tf  locals.tf  main.tf  providers.tf  teams.yaml
iac/terraform/modules/ecs/: alb.tf  api.tf  load_balancer.tf  main.tf  networking.tf  providers.tf  security.tf  ui.tf  variables.tf
iac/terraform/modules/s3/: README.md  main.tf  providers.tf  variables.tf
libs/tools/: README.md  pyproject.toml
libs/tools/test_tools/: test_code_audit.py
libs/tools/tools/: __init__.py  code_audit.py  logger.py
scripts/: README.md  build.sh  build_wheel.sh  projects.sh  test.sh
tests/: __init__.py
ui/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
ui/ui/: 1_🏷️_Tag_Generator.py  __init__.py  settings.py
ui/ui/config/: users.yaml
ui/ui/pages/: 2_📊_Dashboard.py  3_👩🏾‍💻_About.py
