[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Tatiana <tatiana.ekeinhor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
numpy = "^1.26.3"
tag_generator = {path="../core/tag_generator", develop=true}
tools = {path="../libs/tools", develop=true}
httpx = "^0.26.0"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fmt = "tools.code_audit:fmt"
lint = "tools.code_audit:lint"
secu = "tools.code_audit:secu"
all = "tools.code_audit:all"


[tool.poetry.group.test.dependencies]
tools = {path="../libs/tools", develop=true}
