[tool.poetry]
name = "taggenerator"
version = "0.3.0"
description = ""
authors = ["Tatiana <tatiana.ekeinhor@gmail.com>"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fmt = "tools.code_audit:fmt"
lint = "tools.code_audit:lint"
secu = "tools.code_audit:secu"
all = "tools.code_audit:all"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
halo = "^0.0.31"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
langdetect = "^1.0.9"
pandas = "^2.1.4"
lxml = "^4.9.4"
nltk = "^3.8.1"
scikit-learn = "1.3.2" #TODO set till next minor
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
tools = {path="../../libs/tools", develop=true}
