[tool.poetry]
name = "tools"
version = "0.3.0"
description = ""
authors = ["Tatiana <tatiana.ekeinhor@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fmt = "tools.code_audit:fmt"
lint = "tools.code_audit:lint"
secu = "tools.code_audit:secu"
all = "tools.code_audit:all"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
halo = "^0.0.31"
pylama = {version="^8.4.1", extras=["mypy", "pylint", "toml"]}
black = "^23.1.0"
bandit = "^1.7.6"
# Fix pylama broken behavior with recent pydocstyle version
pydocstyle = "~6.1.1"
pytest = "^7.4.3"
isort = "^5.13.2"
